<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Here you can replace it with your logo or brand name -->
            <ImageView
                android:layout_width="170dp"
                android:layout_height="167dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/applogo"
                android:padding="16dp"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"></RelativeLayout>
            <EditText
                android:id="@+id/EmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:ems="10"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#ffffff" />


            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="#f9d7db"-->
                <!--/>-->


            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="66dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:textColorHint="#ffffff" />

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="#f9d7db"-->
                <!--/>-->


            <Button
                android:id="@+id/Login"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:focusable="true"
                android:onClick="btnUserLogIn"
                android:padding="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>



</RelativeLayout>